[BZ #2571]

* nscd/nscd_helper.c (__nscd_get_map_ref): Make mapptr argument a
	volatile pointer so that the mapptr->mapped value is re-read after
	the lock is retrieved.
	* nscd/nscd-client.h: Update __nscd_get_map_ref prototype.

	* sysdeps/unix/sysv/linux/ia64/clone2.S: Check for NULL stack